syntax = "proto3";

option go_package = "pkg/grpc";

package myapp;

service GreetingService {
	rpc Hello (HelloRequest) returns (HelloResponse);
    rpc HelloServerStream (HelloRequest) returns (stream HelloResponse);
    rpc HelloClientStream (stream HelloRequest) returns (HelloResponse);
}

message HelloRequest {
	string name = 1;
}

message HelloResponse {
	string message = 1;
}
